# src/routes/index.js
@@ -3,8 +3,10 @@ const router = express.Router();
 
 const authRoutes = require("./authRoutes");
 const userRoutes = require("./userRoutes");
+const todoRoutes = require("./todoRoutes");
 
 router.use("/auth", authRoutes);
 router.use("/users", userRoutes);
+router.use("/todo", todoRoutes);
 
 module.exports = router;
